Creating reusable Input component, adding sass

--- a/src/components/ListWrapper/ListItem/ListItem.module.scss
+++ b/src/components/ListWrapper/ListItem/ListItem.module.scss
@@ -1,13 +1,25 @@
-.listItem__wrapper {
-  list-style: none;
-  padding: 50px 30px;
-  padding: 0;
-  margin: 0 0 50px;
-  display: flex;
-  align-items: center;
+@keyframes appear {
+  0% {
+    opacity: 0;
+    top: 35px;
+  }
+
+  100% {
+    opacity: 1;
+    top: 0;
+  }
 }
 
-.listItem__image {
+.wrapper {
+  list-style: none;
+  padding: 50px 30px;
+  display: flex;
+  align-items: center;
+  position: relative;
+  animation: appear .5s ease;
+}
+
+.image {
   flex-shrink: 0;
   margin-right: 30px;
   width: 150px;
@@ -15,23 +27,28 @@
   border-radius: 50%;
 }
 
-.listItem__name {
+.imageNone {
+  @extend .image;
+  background: lightgrey;
+}
+
+.name {
   margin: 0;
-  color: #1e58ff;
+  color: #1E58FF;
   font-weight: 700;
 }
 
-.listItem__description {
+.description {
   margin: 10px 0 20px;
   font-weight: 300;
 }
 
-.listItem__button {
+.button {
   font-size: 10px;
   text-decoration: none;
   padding: 7px 12px;
   font-weight: 500;
   background: none;
-  border: 2px solid #1e58ff;
-  color: #1e58ff;
+  border: 2px solid #1E58FF;
+  color: #1E58FF;
 }
