--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -6,4 +6,13 @@
   background: none;
   border: 2px solid #1e58ff;
   color: #1e58ff;
+  cursor: pointer;
+}
+
+.secondary {
+  @extend .button;
+
+  background: #1e58ff;
+  color: #fff;
+  box-shadow: 0 0 20px 5px #ddd
 }
