--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,5 +1,8 @@
 .button {
+  display: block;
+  max-width: 120px;
   font-size: 10px;
+  text-align: center;
   text-decoration: none;
   padding: 7px 12px;
   font-weight: 500;
@@ -12,7 +15,11 @@
 .secondary {
   @extend .button;
 
+  width: 120px;
   background: #1e58ff;
   color: #fff;
-  box-shadow: 0 0 20px 5px #ddd
+  box-shadow: 0 0 20px 5px #ddd;
+  font-weight: 700;
+  font-size: .8em;
+  box-shadow: 0 5px 20px -5px rgba(#818181, .9);
 }
